# clipped

./: .clipped.toml  .clippy.toml  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .rustfmt.toml  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  release.toml  renovate.json
.github/workflows/: ci.yml  release.yml
src/: cli.rs  clippy.rs  config.rs  context.rs  diagnostics.rs  error.rs  lib.rs  logger.rs  matcher.rs
tests/: basic.rs  config.rs  workspace.rs
tests/fixtures/basic/src/: lib.rs
tests/fixtures/config/: .clipped.toml  Cargo.toml  custom_config.toml
tests/fixtures/config/src/: main.rs
tests/fixtures/workspace/crates/a/: Cargo.toml
tests/fixtures/workspace/crates/a/src/: lib.rs
tests/fixtures/workspace/crates/b/: Cargo.toml
tests/fixtures/workspace/crates/b/src/: lib.rs
